--- a/geek-cloud-application/src/main/resources/com/geek/cloud/main.fxml
+++ b/geek-cloud-application/src/main/resources/com/geek/cloud/main.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="563.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/16"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.geek.cloud.controllers.MainController">
-   <children>
-      <ListView fx:id="view" layoutX="13.0" layoutY="6.0" prefHeight="384.0" prefWidth="424.0" />
-      <TextField fx:id="input" alignment="CENTER_RIGHT" layoutX="13.0" layoutY="473.0" prefHeight="33.0" prefWidth="424.0" />
-      <Button layoutX="13.0" layoutY="507.0" mnemonicParsing="false" onAction="#sendFiles" prefHeight="33.0" prefWidth="424.0" text="SEND" />
-      <TextArea fx:id="downView" layoutX="13.0"
-                layoutY="390.0" prefHeight="83.0"
-                prefWidth="424.0" />
-
-   </children>
+<AnchorPane prefHeight="558.0" prefWidth="710.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.geek.cloud.controllers.MainController">
+   <ListView fx:id="clientView" layoutX="28.0" layoutY="31.0" prefHeight="496.0" prefWidth="274.0" />
+   <ListView fx:id="serverView" layoutX="403.0" layoutY="31.0" prefHeight="496.0" prefWidth="274.0" />
+   <Button onAction="#upload" layoutX="318.0" layoutY="184.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="upload" />
+   <Button onAction="#download" layoutX="318.0" layoutY="293.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="75.0" text="download" />
 </AnchorPane>
